--- a/tracker.html
+++ b/tracker.html
@@ -174,7 +174,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button">  <a href="https://www.youtube.com/watch?v=VjlCuJdKmKs">Video Link</a> </button>
             </section>
         </div>
         <div class="experience">
@@ -191,7 +191,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button"> <a href="https://www.youtube.com/watch?v=0EYL2jIRV4A"> Video Link</a> </button>
 
             </section>
         </div>
@@ -209,7 +209,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button"> <a href="https://www.youtube.com/watch?v=KRfO-chRD3w"> Video Link</a> </button>
             </section>
         </div>
         <div class="experience">
@@ -226,7 +226,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button"> <a href="https://youtube.com/watch?v=MZ1G7yX0kj0&t=8s"> Video Link</a> </button>
             </section>
 
         </div>
@@ -244,7 +244,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button"> <a href="https://youtube.com/watch?v=MZ1G7yX0kj0&t=8s">Video Link</a> </button>
 
             </section>
         </div>
@@ -262,7 +262,7 @@
                 </p>
                 <br>
                 <br>
-                <button type="button"> Video Link </button>
+                <button type="button"> <a href="https://www.youtube.com/watch?v=KRfO-chRD3w&t=744s">Video Link</a> </button>
 
 
             </section>
